implementacion de eslint moderno (save--dev)

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
+    "eslint": "^9.25.1",
+    "globals": "^16.0.0",
     "nodemon": "^3.1.10",
-    "standard": "^17.1.2"
-  },
-  "eslintConfig": {
-    "extends": "standard"
+    "typescript-eslint": "^8.31.1"
   },
   "dependencies": {
     "cors": "2.8.5",
