--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start:mysql": "node --watch server-with-mysql.js",
+    "start:local": "node --watch server-with-local.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "5.1.0",
+    "mysql2": "^3.14.1",
     "zod": "3.24.3"
   }
 }
